--- a/style.css
+++ b/style.css
@@ -13,16 +13,14 @@ body {
 .aaa img {
   width: 100%;
 }
-.aaa .more_inf {
+.aaa .more-inf {
   font-family: fantasy, cursive;
 }
 
-@media (max-width:768px) {
-	.aaa { 
-		text-align: center;
+@media (max-width:768px) {.aaa { text-align: center;
 	}
 }
-.centered-main-page-element {
+.centered-main__page-element {
 	display: block;
 	width: 500px;
 	margin: 0 auto 0;
@@ -32,7 +30,7 @@ body {
 	display: inline-block;
 	flex-grow: 1
 }
-.task-row-wrapper {
+.task-row__wrapper {
 	display: flex;
 }
 ul {
