refactor: adjust HTML-formatting according to rule 3.2 and 3.3 in html-css-js.md

--- a/style.css
+++ b/style.css
@@ -4,28 +4,28 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.info {
 	width: 500px;
 	margin: 0 auto;
 	display: block;
 	text-align: right;
 }
-.aaa img {
+.info img {
   width: 100%;
 }
-.aaa .more-inf {
+.info .more-info {
   font-family: fantasy, cursive;
 }
 
-@media (max-width:768px) {.aaa { text-align: center;
+@media (max-width:768px) {.info { text-align: center;
 	}
 }
-.centered-main__page-element {
+.centered-main__page-elm {
 	display: block;
 	width: 500px;
 	margin: 0 auto 0;
 }
-.task {
+.task-txt {
 	width: 56%;
 	display: inline-block;
 	flex-grow: 1
@@ -114,20 +114,20 @@ li > label {
 	font-size: 18px;
 	width: 226px;
 }
-li >    input[type="text"] {
+li > input[type="text"] {
   width: 226px
 }
-button.delete img {
+button.delete-btn img {
 	height: 2em;
 	transform: rotateZ(45deg);
 	transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+button.delete-btn img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+ul #completed-tasks label {
 	text-decoration: line-through
 	color: #888;
 }
@@ -137,11 +137,11 @@ ul li input[type=text] {
 	display:none
 }
 
-ul li.editMode input[type=text] {
+ul li.edit-mode input[type=text] {
 	display:inline-block;
 	width:224px
 }
 
-ul li.editMode label {
+ul li.edit-mode label {
   display:none;
 }
