--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ li > input[type='text'] {
 
 /* Completed */
 #completed-tasks {
-  text-decoration: line-through;
+  text-decoration: line-through
   color: #888;
 }
 
